@@ -1,3 +1,8 @@
+2010-03-05  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* vector-operations.lisp (centre-of-mass): Added a generic
+	function to calculate the average of a group of points.
+
 2010-02-27  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* random.lisp (noise3): Updated to test the given argument to
